--- a/templates/shop/product/list.html
+++ b/templates/shop/product/list.html
@@ -37,7 +37,7 @@ Products
         </a>
         <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
         <br />
-        %{{ product.price }}
+        ${{ product.price }}
     </div>
     {% endfor %}
 </div>
