adding internationalization using django done...using django-parler for models in progress

--- a/templates/payment/completed.html
+++ b/templates/payment/completed.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block title %} Payment successful {% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Payment successful" %} {% endblock %}
 {% block content %}
-<h1>Your payment was successful</h1>
-<p>Your payment has been processed successfully</p>
-<p>Go back to <a href="{% url 'shop:product_list' %}">Home Page</a></p>
+<h1>{% trans "Your payment was successful" %}</h1>
+<p>{% trans "Your payment has been processed successfully" %}</p>
+<p>{% trans "Go back to" %} <a href="{% url 'shop:product_list' %}">{% trans "Home Page" %}</a></p>
 {% endblock %}
