--- a/templates/order/create.html
+++ b/templates/order/create.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-{% block title %} Checkout {% endblock %}
+{% load i18n %}
+{% block title %} {% trans "Checkout" %} {% endblock %}
 {% block content %}
 <h1>Checkout</h1>
 <div class="order-info">
-    <h3>Your order</h3>
+    <h3>{% trans "Your order" %}</h3>
     <ul>
         {% for item in cart %}
         <li>
@@ -13,17 +14,19 @@
         {% endfor%}
         {% if cart.coupon %}
         <li>
-            "{{ cart.coupon.code }}" ({{ cart.coupon.discount }}% off)
+            {% blocktrans with code=cart.coupon.code discount=cart.coupon.discount%}
+            "{{ code }}" ({{ discount }}% off)
             <span class="neg">- ${{ cart.get_discount|floatformat:2 }} </span>
+            {% endblocktrans %}
         </li>
         {% endif %}
     </ul>
-    <p>Total: ${{ cart.get_total_price_after_discount|floatformat:2 }}</p>
+    <p>{% trans "Total" %}: ${{ cart.get_total_price_after_discount|floatformat:2 }}</p>
 </div>
 <form method="post" class="order-form">
     {{form.as_p}}
     <p>
-        <input type="submit" value="Place order" />
+        <input type="submit" value="{% trans 'Place order' %}" />
     </p>
     {% csrf_token %}
 </form>
