--- a/templates/payment/cancelled.html
+++ b/templates/payment/cancelled.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-{% block title %} Payment cancelled {% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Payment cancelled" %} {% endblock %}
 {% block content %}
-<h1>Your payment has not been processed</h1>
-<p>There was a problem processing your payment</p>
+<h1>{% trans "Your payment has not been processed" %}</h1>
+<p>{% trans "There was a problem processing your payment" %}</p>
 {% endblock %}
