--- a/templates/shop/product/detail.html
+++ b/templates/shop/product/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load static %}
 {% block title %}{{product.name}}{% endblock %}
 {% block content %}
@@ -15,13 +16,13 @@
     <form action="{% url 'cart:cart_add' product.id %}" method="post">
         {{cart_product_form}}
         {% csrf_token %}
-        <input type="submit" value="Add to cart" />
+        <input type="submit" value="{% trans 'Add to cart' %}" />
     </form>
     {{ product.description|linebreaks }}
 
     {% if recommended_products %}
     <div class="recommendations">
-        <h3>People who bought this also bought</h3>
+        <h3>{% trans "People who bought this also bought" %}</h3>
         {% for p in recommended_products %}
         <div class="item">
             <a href="{{ p.get_absolute_url }}">
