--- a/templates/shop/product/list.html
+++ b/templates/shop/product/list.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load static %}
 {% block title %}
 {% if category %}
 {{category.name}}
 {% else %}
-Products
+{% trans "Products" %}
 {% endif %}
 {% endblock%}
 {% block content %}
 <div id="sidebar">
-    <h3>Categories</h3>
+    <h3>{% trans "Categories" %}</h3>
     <ul>
         <li {% if not categories %}class="selected" {% endif %}>
-            <a href="{% url 'shop:product_list' %}">All</a>
+            <a href="{% url 'shop:product_list' %}">{% trans "All" %}</a>
         </li>
         {% for c in categories %}
         <li {% if category.slug is c.slug %}class="selected" {% endif %}>
@@ -26,7 +27,7 @@ Products
         {% if category %}
         {{category.name}}
         {% else %}
-        Products
+        {% trans "Products" %}
         {% endif %}
     </h1>
     {% for product in products %}
